# claude-pet

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
pet/clawd/: pet.json
pet/doudoudoudou/: pet.json
pet/ikkun/: pet.json
pet/nimbus/: pet.json
pet/shinchan/: pet.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  lifecycle.rs  main.rs  passthrough.rs  tray.rs
src-tauri/src/bridge/: handlers.rs  mod.rs  permissions.rs  server.rs
src-tauri/src/cli/: bridge_client.rs  doctor.rs  hook.rs  install.rs  mod.rs  pets.rs  statusline.rs
src-tauri/src/domain/: config.rs  cursor.rs  git.rs  mod.rs  paths.rs  pets.rs  transcript.rs
src-tauri/src/fs/: json_file.rs  mod.rs
src-tauri/src/state/: mod.rs  runtime_state.rs  status.rs
src/components/: PetCanvas.tsx
src/hooks/: useUpdate.ts
src/lib/: animation.ts  format.ts  invoke.ts  types.ts
src/views/: PetView.tsx
