[package]
name = "claude-pet"
version = "0.1.1"
description = "ClaudePet — Claude Code desktop pet, Rust + Tauri rewrite"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
default-run = "claude-pet"

[lib]
name = "claude_pet_lib"
path = "src/lib.rs"

[[bin]]
name = "claude-pet"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "protocol-asset"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"

# async runtime + http bridge
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["limit"] }

# http client (CLI side)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# utils
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
dirs = "6"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
url = "2"
log = "0.4"

# Global cursor position query for click-through hit-testing (Windows only).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Console"] }

[features]
# this feature is used for production builds or when `devUrl` points to the dev server
custom-protocol = ["tauri/custom-protocol"]
